--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "require": {
         "php": ">=7.0",
-        "oro/platform": "^2.6 | ^3.1",
+        "oro/platform": "^2.6 | ^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
