BundleConfig and TestConfig

--- a/src/Resources/config/oro/bundles.yml
+++ b/src/Resources/config/oro/bundles.yml
@@ -1,2 +1,2 @@
 bundles:
-    - { name: EHDEv\GDPRComplianceBundle\EHDevGDPRComplianceBundle, priority: 100 }
+    - { name: EHDev\GDPRComplianceBundle\EHDevGDPRComplianceBundle, priority: 100 }
